--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
 },
 "homepage": "https://github.com/DanielDiod/Ai-Otho",
 "author": {
-"name": "DanielDiod"
+"name": "Izumi-kzx"
 },
 "collaborators": {
-"col1": "Dev-Diego",
-"col2": "GataNina-Li"
+"col1": "Darkcore",
+"col2": "Izumi-kzx"
 },
 "repository": {
 "type": "git",
@@ -44,6 +44,10 @@
 "@ibaraki-douji/pixivts": "^2.4.1",
 "awesome-phonenumber": "^3.4.0",
 "ruhend-scraper": "^7.0.4",
+"ultrax": "^2.0.5",
+"canvafy": "^7.2.0",
+"google-play-scraper": "10.0.1",
+"bing-translate-api": "^4.0.2",
 "gradient-string": "^2.0.2",
 "google-libphonenumber": "3.2.38",
 "axios": "^1.1.2",
@@ -65,7 +69,7 @@
 "lodash": "^4.17.21",
 "lowdb": "^3.0.0",
 "mongoose": "^6.6.5",
-"node-fetch": "^3.3.2",
+"node-fetch": "^3.2.10",
 "node-gtts": "^2.0.2",
 "node-os-utils": "^1.3.6",
 "node-webpmux": "^3.1.3",
@@ -93,6 +97,7 @@
 "hispamemes": "^1.0.7",
 "openai": "^3.3.0",
 "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
+"archiver": "^7.0.1",
 "megajs": "^1.1.3",
 "mime-types": "^2.1.35",
 "api-dylux": "^1.7.2",
